Fix: update z-index for sortbar dropdown

--- a/src/components/SortBar/sort-bar.module.scss
+++ b/src/components/SortBar/sort-bar.module.scss
@@ -1,5 +1,5 @@
 .container {
-	@apply w-full px-4 py-3.5 z-10 flex items-center justify-between bg-zinc-50 rounded-lg shadow-lg shadow-zinc-200;
+	@apply w-full px-4 py-3.5 z-20 flex items-center justify-between bg-zinc-50 rounded-lg shadow-lg shadow-zinc-200;
 	.list {
 		@apply h-full gap-1.5 flex items-center relative;
 		.item {
